perf: TE7-T116 Active Record Basics
Made suggested changes.
updated html files & followed naming conventions in callbacks.

--- a/app/views/product/show.html.erb
+++ b/app/views/product/show.html.erb
@@ -28,6 +28,6 @@
     <%= @product.brand %>
   </h5><hr>
   
-  <a class="btn btn-flat btn-danger float-left" href="/product">Back</a>
+  <%= link_to "Back", "/product" %>
 
 </div>
