--- a/app/views/product/index.html.erb
+++ b/app/views/product/index.html.erb
@@ -17,7 +17,7 @@
           <td><%= product.id %></td>
           <td><%= product.title %></td>
           <td>
-            <a href="/product/<%= product.id %>" class="btn btn-sm btn-outline-success">View</a>
+            <%= link_to "View", product %>
           </td>
         </tr>
       <% end %>
