refactor: TE7-T117 Active Record Migrations
Did some suggested changes.

--- a/app/views/authors/edit.html.erb
+++ b/app/views/authors/edit.html.erb
@@ -9,7 +9,7 @@
     <div class="col-6">
       <hr>
       
-      <%= render :partial => "form", locals: { author: @author, submit_btn: "Update Author" } %>
+      <%= render partial: "form", locals: { author: @author, submit_btn: "Update Author" } %>
 
     </div>
     <div class="col-3">
