--- a/app/views/authors/new.html.erb
+++ b/app/views/authors/new.html.erb
@@ -8,7 +8,7 @@
     <div class="col-6">
       <hr>
       
-      <%= render :partial => "form", locals: { author: @author, submit_btn: "Create Author" } %>
+      <%= render partial: "form", locals: { author: @author, submit_btn: "Create Author" } %>
       
     </div>
     <div class="col-3">
