--- a/app/views/books/_error_message.html.erb
+++ b/app/views/books/_error_message.html.erb
@@ -1,3 +1,5 @@
 <% book.errors.full_messages_for(field).each do |message| %>
-  <div><%= message %></div>
+  <div class="alert alert-danger" role="alert">
+    <%= message %>
+  </div>
 <% end %>
