--- a/app/views/authors/_form.html.erb
+++ b/app/views/authors/_form.html.erb
@@ -3,7 +3,7 @@
     <%= form.label :first_name %><br>
     <%= form.text_field :first_name, class:"form-control", placeholder:"Enter firstname" %>
     
-    <%= render :partial => "error_message", locals: { author: author, field: :first_name } %>
+    <%= render partial: "error_message", locals: { author: author, field: :first_name } %>
 
   </div>
 
@@ -11,7 +11,7 @@
     <%= form.label :last_name %><br>
     <%= form.text_field :last_name, class:"form-control", placeholder:"Enter lastname" %>
     
-    <%= render :partial => "error_message", locals: { author: author, field: :last_name } %>
+    <%= render partial: "error_message", locals: { author: author, field: :last_name } %>
 
   </div>
 
@@ -19,7 +19,7 @@
     <%= form.label :date_of_birth %><br>
     <%= form.date_field :date_of_birth, class:"form-control" %>
     
-    <%= render :partial => "error_message", locals: { author: author, field: :date_of_birth } %>
+    <%= render partial: "error_message", locals: { author: author, field: :date_of_birth } %>
 
   </div>
 
@@ -27,7 +27,7 @@
     <%= form.label :email %><br>
     <%= form.email_field :email, class:"form-control", placeholder:"Enter email address" %>
     
-    <%= render :partial => "error_message", locals: { author: author, field: :email } %>
+    <%= render partial: "error_message", locals: { author: author, field: :email } %>
 
   </div>
 
