--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -3,7 +3,7 @@
     <%= form.label :name %><br>
     <%= form.text_field :name, class:"form-control", placeholder:"Enter bookname" %>
     
-    <%= render :partial => "error_message", locals: { book: book, field: :name } %>
+    <%= render partial: "error_message", locals: { book: book, field: :name } %>
 
   </div>
 
@@ -11,7 +11,7 @@
     <%= form.label :price %><br>
     <%= form.text_field :price, class:"form-control", placeholder:"Enter Price" %>
     
-    <%= render :partial => "error_message", locals: { book: book, field: :price } %>
+    <%= render partial: "error_message", locals: { book: book, field: :price } %>
 
   </div>
 
