--- a/app/views/faculties/index.html.erb
+++ b/app/views/faculties/index.html.erb
@@ -33,9 +33,9 @@
         </tbody>
       </table>
       <div class="row col-12 justify-content-center"> 
-        <%= link_to "Add new Faculty", new_faculty_path(), class:"btn btn-primary float-left" %>
+        <%= link_to "Add new Faculty", new_faculty_path, class:"btn btn-primary float-left" %>
         &nbsp;&nbsp;
-        <%= link_to "Students", students_path(), class:"btn btn-dark float-left" %>
+        <%= link_to "Students", students_path, class:"btn btn-dark float-left" %>
       </div>
     </div>
     <div class="col-2"></div>
