--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -33,9 +33,9 @@
         </tbody>
       </table>
       <div class="row col-12 justify-content-center"> 
-        <%= link_to "Add new Student", new_student_path(), class:"btn btn-primary float-left" %>
+        <%= link_to "Add new Student", new_student_path, class:"btn btn-primary float-left" %>
         &nbsp;&nbsp;
-        <%= link_to "Faculties", faculties_path(), class:"btn btn-dark float-left" %>
+        <%= link_to "Faculties", faculties_path, class:"btn btn-dark float-left" %>
       </div>
     </div>
     <div class="col-2"></div>
