feat: TE7-T119 Active Record Callbacks
Use previous practicals and add callbacks to the models. CallBack registration
Create callbacks which call after_initialize, after_find, Creating an Object, Updating an Object, Destroying an Object of student and faculty
Use callback after_validation DOB in faculty For example calculating age and save it to DB and display on view.
Use callback before_validation DOB in student,e.g set some default date, if date is not selected from view.
Add a prefix email id with "ror_demo" everytime(both student and faculty) before record is being saved to DB.
Display a message 'Email validated' for the student once the record is validated and created in DB.
Running callbacks:-  Use methods that trigger callbacks print valid message
Skipping Callbacks:- Use methods that skip callbacks
Create a conditional callback that called after deleting a student
See use of callback after_commit only on create, update, or delete is actions and also see use of there aliases methods.
	Update a counter cache(like student_count and faculty_count) after a record is saved
	Add counter how many times student and faculty record is updated since its first creation.
	Log a message after a record is deleted: "Student/Faculty faculty_name is removed from system."

--- a/app/views/faculties/show.html.erb
+++ b/app/views/faculties/show.html.erb
@@ -23,6 +23,10 @@
             <td><%= @faculty.dob %></td>
           </tr>
           <tr>
+            <th>Age</th>
+            <td><%= @faculty.age %></td>
+          </tr>
+          <tr>
             <th>Department</th>
             <td><%= @faculty.department %></td>
           </tr>
