refactor: TE7-T123 Action Controller Overview
done suggested changes.

--- a/app/views/cars/_logout.html.erb
+++ b/app/views/cars/_logout.html.erb
@@ -6,7 +6,7 @@
     <h4>Hello <%=cookies[:user_name].titleize%> (<%= link_to "download pdf", download_pdf_path %>) </h4>
   </div>
   <div class="col-6">
-    <%= link_to "Logout", user_path(current_user.id), data: { turbo_method: :delete }, class:"btn btn-danger float-right" %>
+    <%= link_to "Logout", '/user/logout', class:"btn btn-danger float-right" %>
   </div>
 </div>
 <br>
