--- a/app/views/cars/edit.html.erb
+++ b/app/views/cars/edit.html.erb
@@ -7,7 +7,7 @@
     <div class="col-3">
     </div>
     <div class="col-6">
-      <%= render partial: "logout" %>
+      <%= render partial: "header_bar" %>
       
       <%= render partial: "error_message" %>
       <hr>
