--- a/app/views/cars/index.html.erb
+++ b/app/views/cars/index.html.erb
@@ -4,7 +4,7 @@
     <div class="col-2"></div>
     <div class="col-8">
 
-      <%= render partial: "logout" %>
+      <%= render partial: "header_bar" %>
 
       <div class="row">
         <div class="mx-auto">
@@ -47,6 +47,7 @@
       </table>
       <div class="row"> 
         <div class="col-6">
+          <%= link_to "Back", users_path, class:"btn btn-danger float-left" %>
           <%= link_to "Add new Car", new_car_path, class:"btn btn-primary float-left" %>
         </div>
         <div class="col-6">
