--- a/app/views/cars/new.html.erb
+++ b/app/views/cars/new.html.erb
@@ -6,7 +6,7 @@
     <div class="col-3">
     </div>
     <div class="col-6">
-      <%= render partial: "logout" %>
+      <%= render partial: "header_bar" %>
       
       <%= render partial: "error_message" %>
 
