--- a/app/views/cars/show.html.erb
+++ b/app/views/cars/show.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="col-3"></div>
     <div class="col-6">
-      <%= render partial: "logout" %>
+      <%= render partial: "header_bar" %>
       <table class="table table-hover table-bordered text-center">
         <tbody>
           <tr>
