--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,11 +4,12 @@
     <%=flash[:notice]%>
   </div>
 
-  <% unless logged_in? %>
-
-    <div class="row">
-      <div class="col-3"></div>
-      <div class="col-6">
+  <div class="row">
+    <div class="col-3"></div>
+    <div class="col-6">
+      
+      <% unless logged_in? %>
+        
         <h1>Login</h1>
         <%= form_tag (users_path) do %>
           <div class="input-group mb-3">
@@ -27,9 +28,35 @@
             <%= submit_tag :login, class: 'btn-success rounded p-1 px-2' %>
           </div>
         <% end %>
-      </div>
-      <div class="col-3"></div>
-    </div>
+          
+      <%else%>
+      
+        <%= render partial: "logout" %>
+        <hr>
+        <table class="table table-hover table-bordered">
+          <thead>
+            <tr>
+              <th>User Actions</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td><%= link_to "Cars", cars_path %></td>
+            </tr>
+            <tr>
+              <td><%= link_to "Your Events", events_path %></td>
+            </tr>
+            <tr>
+              <td><%= link_to "Enroll into events", enrollments_path %></td>
+            </tr>
+            <tr>
+              <td><%= link_to "Profile", profiles_path %></td>
+            </tr>
+          </tbody>
+        </table>
 
-  <% end %>
+      <% end %>
+    </div>
+    <div class="col-3"></div>
+  </div>
 </div>
