feat: TE7-T120 Active Record Query Interface
1) Create Employee CRUD with the first_name, last_name, email, age, no_of_order, full_time_available, and salary.

2) Use find_or_create_by, find_or_initialize_by keywords in CRUD where applicable.

3) Create one text box and enter the email in that and search if the email exists or not by using find_by.

4) Create buttons for the increase and decrease no of orders by 1 by using find_in_batches for the first 10 employees.

>>> Create One view file and display the below results on that

5) List employees having age > 20 and < 40

6) List employees which are full_time_available

7) List employees which have exactly 5 number of orders and age > 25

8) List employees which are created before today

9) List employees which have exactly 5 number of orders Or age < 25

10) List employees in descending order by age

11) List employees in ascending order by number of order

12) List employees having a salary > 45000

13) Group employees by no_of_order with them and display employees with no_of_order > 5

14) Write examples for keywords unscope, only, reselect, reorder, reverse_order

15) Implement one example of locking

--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -33,9 +33,11 @@
                   <br>
                   <% like_counts = comment.likes.count %>
                   <% if liked_comment?(comment.id, current_user) %>
-                    <%= link_to "Liked (#{like_counts})", unlike_comments_path(comment.id) %>
+                    <%= link_to raw('<i class="fa-solid fa-thumbs-up fa-lg"></i>'), unlike_comments_path(comment.id), :class => "btn float-left py-0", title: "Liked" %>
+                    <%= "(#{like_counts} likes)" %>
                   <% else %>
-                    <%= link_to "Like (#{like_counts})", like_comments_path(comment.id) %>
+                    <%= link_to raw('<i class="fa-regular fa-thumbs-up fa-lg"></i>'), like_comments_path(comment.id), :class => "btn float-left py-0", title: "Like" %>
+                    <%= "(#{like_counts} likes)" %>
                   <% end %>
               </td>
             </tr>
