feat: TE7-T124 Rails Routings
1. Create an Order and Product model with the below relationship:

   Product has_many orders

   Order belongs_to product

2. Add basic CRUD for the products controller and add resourceful routes for it.

3. Add basic CRUD for the orders controller and add routes with product(with nested routes).

4. Show all orders of product on the product's show page.

5. Create a Customer model. Add only create, edit, and index functionality for it. Create a route for create, edit, and index action only. Use 'business' as the namespace for it.

6. Add an extra route with a name preview for the customer model and add action accordingly in the controller(Use method accordingly).

7. Add an extra route with the name delete_customer for the customer model and add action accordingly in the controller(Use method accordingly).

8. Add an extra route for customer search and add action accordingly in the controller(Use method accordingly).

9. Use the product's index as the root route.

10. Create one folder app/api/v1 and define namespace routing for the same. Create any controller for verification.

--- a/app/views/business/customers/edit.html.erb
+++ b/app/views/business/customers/edit.html.erb
@@ -20,7 +20,7 @@
         </div>
       <% end %>
       <hr>
-      <%= render partial: "form", locals: { customer: @customer, submit_btn: "Update Customer" } %>
+      <%= render partial: "form", locals: { customer: @customer, submit_btn: "Update Customer", url: "business_customer_path" } %>
 
     </div>
     <div class="col-3">
