--- a/app/views/business/customers/_form.html.erb
+++ b/app/views/business/customers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: customer do |form| %>
+<%= form_with model: customer, url: url do |form| %>
   <div class="form-group">
     <%= form.label :first_name %>
     <%= form.text_field :first_name, class:"form-control", placeholder:"Enter firstname" %>
@@ -24,7 +24,7 @@
       <%= form.submit value:"#{submit_btn}", class:"btn btn-sm btn-success float-left" %>
     </div>
     <div class="col-6">
-      <%= link_to "Back", customers_path, class:"btn btn-sm btn-danger float-right" %>
+      <%= link_to "Back", business_customers_path, class:"btn btn-sm btn-danger float-right" %>
     </div>
   </div>
 <% end %>
