--- a/app/views/business/customers/new.html.erb
+++ b/app/views/business/customers/new.html.erb
@@ -21,7 +21,7 @@
     <% end %>
 
       <hr>
-      <%= render partial: "form", locals: { customer: @customer, submit_btn: "Create Customer" } %>
+      <%= render partial: "form", locals: { customer: @customer, submit_btn: "Create Customer", url: "business_customers_path" } %>
       
     </div>
     <div class="col-3">
