--- a/app/views/business/customers/preview.html.erb
+++ b/app/views/business/customers/preview.html.erb
@@ -31,7 +31,7 @@
 
       <div class="row">
         <div class="col-12">
-          <%= link_to "Back", customers_path, class:"btn btn-sm btn-danger float-right" %>
+          <%= link_to "Back", business_customers_path, class:"btn btn-sm btn-danger float-right" %>
         </div>
       </div>
     </div>
