--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -6,16 +6,16 @@
 
       <div class="row">
         <div class="col-3">
-          <%= link_to "most sales product by quantity...", customer_task_path(1), class:"btn btn-sm btn-dark" %>
+          <%= link_to "most sales product by quantity...", business_customer_task_path(1), class:"btn btn-sm btn-dark" %>
         </div>
         <div class="col-3">
-          <%= link_to "most sales product by price...", customer_task_path(2), class:"btn btn-sm btn-dark" %>
+          <%= link_to "most sales product by price...", business_customer_task_path(2), class:"btn btn-sm btn-dark" %>
         </div>
         <div class="col-3">
-          <%= link_to "most booked order of product...", customer_task_path(3), class:"btn btn-sm btn-dark" %>
+          <%= link_to "most booked order of product...", business_customer_task_path(3), class:"btn btn-sm btn-dark" %>
         </div>
         <div class="col-3">
-          <%= link_to "most canceled order of product...", customer_task_path(4), class:"btn btn-sm btn-dark" %>
+          <%= link_to "most canceled order of product...", business_customer_task_path(4), class:"btn btn-sm btn-dark" %>
         </div>
       </div>
       <hr>
@@ -80,7 +80,10 @@
       <div class="row col-12 justify-content-center">
           <%= link_to "Items", items_path, class:"btn btn-dark btn-sm" %>
           &nbsp;&nbsp;
-          <%= link_to "Customers", customers_path, class:"btn btn-dark btn-sm" %>
+          <%= link_to "Customers", business_customers_path, class:"btn btn-dark btn-sm" %>
+      </div> <br>
+      <div class="row col-12 justify-content-center">
+          <%= link_to "API-V1", api_v1_orders_path, class:"btn btn-secondary btn-sm" %>
       </div> 
       
     </div>
